<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_background"
        android:backgroundTint="@android:color/holo_orange_light"
        >


    <TextView
            android:id="@+id/txt_eur_usd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="280dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_horizontal"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col5_header"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            />

    <TextView
            android:id="@+id/col3_header"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lbl_saved"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/col2_header"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
            android:id="@+id/txt_saved_date"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/edit_background"
            android:gravity="top|end"
            android:padding="3dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/col3_header"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            />

    <TextView
            android:id="@+id/txt_price_hpe"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col2_header"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

    <TextView
            android:id="@+id/txt_pct_hpe"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="220dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col4_header"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

    <TextView
            android:id="@+id/txt_rate_usd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col2_header"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_datetime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/col2_header"
            />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_agilent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            />

    <TextView
            android:id="@+id/col2_header"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lbl_now"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
            android:id="@+id/txt_eur_agilent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="280dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_horizontal"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col5_header"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/txt_eur_hpe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_horizontal"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col5_header"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

    <TextView
            android:id="@+id/txt_saved_usd"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/col3_header"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_usd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/col4_header"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lbl_pct"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/col3_header"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
            android:id="@+id/txt_refresh_date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_background"
            android:gravity="top|end"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col2_header"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            />

    <TextView
            android:id="@+id/txt_pct_agilent"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="220dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col4_header"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/txt_saved_agilent"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/col3_header"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_hpe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            />

    <TextView
            android:id="@+id/col5_header"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lbl_diff_eur"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/col4_header"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
            android:id="@+id/txt_price_agilent"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="151dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col2_header"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/txt_pct_usd"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="220dp"
            android:background="@drawable/edit_background"
            android:gravity="end|center_vertical"
            android:padding="3dp"
            app:layout_constraintEnd_toEndOf="@+id/col4_header"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />

    <TextView
            android:id="@+id/txt_saved_hpe"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="130dp"
            android:background="@drawable/edit_background"
            android:gravity="center_vertical|end"
            android:padding="3dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/col3_header"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            />

    <TextView
            android:id="@+id/sum_all_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_background"
            android:padding="4dp"
            android:text="@string/lbl_hekjes"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_pct_usd"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            />

    <TextView
            android:id="@+id/sum_div_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_background"
            android:padding="4dp"
            android:text="@string/lbl_hekjes"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/col5_header"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            />

    <Chronometer
            android:id="@+id/view_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_refresh"
            app:layout_constraintEnd_toEndOf="@+id/btn_refresh"
            app:layout_constraintStart_toStartOf="@+id/btn_refresh"
            tools:targetApi="24"
            />
    <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <EditText
            android:id="@+id/txt_qty_hpe"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/txt_qty_agilent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <EditText
            android:id="@+id/txt_qty_agilent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/txt_qty_usd"
            app:layout_constraintStart_toStartOf="parent"
            />

    <EditText
            android:id="@+id/txt_qty_usd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_background"
            android:ems="10"
            android:gravity="end"
            android:inputType="numberDecimal"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            />

</android.support.constraint.ConstraintLayout>